Used object-fit:contain; on the product details page to make the whole main product image visible in the parent container and fixed the search bar styles on the shop page.

--- a/public/assets/css/_product.scss
+++ b/public/assets/css/_product.scss
@@ -133,19 +133,20 @@
                     height: 450px;
                     overflow: hidden;
                     cursor: crosshair;
+                    border: 1px solid grey;
                     border-radius: 10px;
 
                     img {
                         width: 100%;
                         height: 100%;
-                        object-fit: cover;
-                        aspect-ratio: 1/1;
+                        object-fit: contain;
                         border-radius: 10px;
                     }
                 }
 
                 .other_images {
                     margin: 0.5em 0;
+
                     img {
                         height: 70px;
                         width: 70px;
@@ -153,6 +154,7 @@
                         border: 2px solid transparent;
                         border-radius: 4px;
                         transition: border 0.5s ease;
+                        object-fit: contain;
                     }
 
                     .active {
