--- a/public/assets/css/_shop.scss
+++ b/public/assets/css/_shop.scss
@@ -16,6 +16,7 @@
 
             input {
                 border-radius: 32px;
+                margin: 0;
             }
 
             button {
