--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -696,14 +696,14 @@ footer .copyright {
   height: 450px;
   overflow: hidden;
   cursor: crosshair;
+  border: 1px solid grey;
   border-radius: 10px;
 }
 .Product_details .container .wrapper .images .main_product_image img {
   width: 100%;
   height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  aspect-ratio: 1/1;
+  -o-object-fit: contain;
+     object-fit: contain;
   border-radius: 10px;
 }
 .Product_details .container .wrapper .images .other_images {
@@ -716,6 +716,8 @@ footer .copyright {
   border: 2px solid transparent;
   border-radius: 4px;
   transition: border 0.5s ease;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 .Product_details .container .wrapper .images .other_images .active {
   border: 2px solid #000;
@@ -1369,6 +1371,7 @@ footer .copyright {
 }
 .Shop .search form input {
   border-radius: 32px;
+  margin: 0;
 }
 .Shop .search form button {
   position: absolute;
